[gd_scene load_steps=14 format=3 uid="uid://d7itean53d0y"]

[ext_resource type="PackedScene" uid="uid://c1aggrje2gq1k" path="res://enemies/enemy.tscn" id="1_c7cb2"]
[ext_resource type="Texture2D" uid="uid://t5tcxdhb24jj" path="res://assets/prasinos_magkas/PRASINOSMAGKAS1.png" id="2_0brpa"]
[ext_resource type="Script" uid="uid://58e2vgnxwqy5" path="res://enemies/prasinos_magkas/prasinos_magkas_enemy.gd" id="2_j6jlq"]
[ext_resource type="Script" uid="uid://dlp3f5ugampel" path="res://components/timed_state_componoent.gd" id="3_p63t7"]
[ext_resource type="Script" uid="uid://clhrjoloqjr2c" path="res://components/move_component.gd" id="4_j6jlq"]
[ext_resource type="Script" uid="uid://df0mtjsibwj48" path="res://components/border_bounce_component.gd" id="5_6plfn"]
[ext_resource type="Script" uid="uid://djibjc0ndptdp" path="res://components/state_component.gd" id="7_irsqu"]
[ext_resource type="Script" uid="uid://b2icqvnrurryk" path="res://components/spawner_component.gd" id="8_oj4ub"]
[ext_resource type="PackedScene" uid="uid://c4oo08y0017fp" path="res://projectiles/prasinos_magkas_projectile.tscn" id="9_e20wx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c7cb2"]
atlas = ExtResource("2_0brpa")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0brpa"]
atlas = ExtResource("2_0brpa")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1svu0"]
atlas = ExtResource("2_0brpa")
region = Rect2(36, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_6plfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7cb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0brpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1svu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0brpa")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="PrasinosMagkasEnemy" instance=ExtResource("1_c7cb2")]
script = ExtResource("2_j6jlq")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_6plfn")
autoplay = "default"
frame_progress = 0.920651

[node name="HitboxComponent" parent="." index="1"]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent" index="0"]
polygon = PackedVector2Array(-5, 1, -5, -1, -4, -2, -4, -3, -3, -4, -2, -4, -1, -5, -1, -6, 0, -7, 1, -6, 1, -5, 2, -4, 3, -4, 4, -3, 4, -2, 5, -1, 5, 1, 4, 2, 4, 6, 3, 6, 3, 4, 2, 4, 2, 6, 1, 6, 1, 4, -1, 4, -1, 6, -2, 6, -2, 4, -3, 4, -3, 6, -4, 6, -4, 2)

[node name="HurtboxComponent" parent="." index="2"]
position = Vector2(3, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent" index="0"]
position = Vector2(-3, 0)
polygon = PackedVector2Array(-4, 3, -5, 2, -6, 1, -6, 0, -7, -1, -7, -2, -4, -2, -4, -4, -2, -4, -2, -5, -1, -5, -1, -7, 1, -7, 1, -5, 2, -5, 2, -4, 4, -4, 4, -2, 7, -2, 7, -1, 6, 0, 6, 1, 5, 2, 4, 3, 4, 4, 4, 7, 3, 7, 3, 4, 2, 4, 2, 7, 1, 7, 1, 4, -1, 4, -1, 7, -2, 7, -2, 4, -3, 4, -3, 7, -4, 7)

[node name="StatsComponent" parent="." index="4"]
health = 8

[node name="VisibleOnScreenNotifier2D" parent="." index="5"]
position = Vector2(2.38419e-07, 1.19209e-07)
scale = Vector2(0.9, 0.7)

[node name="ScoreComponent" parent="." index="12"]
adjust_amount = 20

[node name="States" type="Node" parent="." index="13"]

[node name="MoveDownState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("3_p63t7")
duration = 2.0
metadata/_custom_type_script = "uid://dlp3f5ugampel"

[node name="MoveComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("4_j6jlq")
actor = NodePath("../../..")
velocity = Vector2(0, 10)
metadata/_custom_type_script = "uid://clhrjoloqjr2c"

[node name="MoveSideState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("3_p63t7")
duration = 3.0
metadata/_custom_type_script = "uid://dlp3f5ugampel"

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("4_j6jlq")
actor = NodePath("../../..")
velocity = Vector2(1, 0)
metadata/_custom_type_script = "uid://clhrjoloqjr2c"

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("5_6plfn")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")
metadata/_custom_type_script = "uid://df0mtjsibwj48"

[node name="ShootState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("7_irsqu")
metadata/_custom_type_script = "uid://djibjc0ndptdp"

[node name="ProjectileSpawnerComponent" type="Node2D" parent="States/ShootState" index="0"]
unique_name_in_owner = true
script = ExtResource("8_oj4ub")
scene = ExtResource("9_e20wx")
metadata/_custom_type_script = "uid://b2icqvnrurryk"

[node name="PauseState" type="Node" parent="States" index="3"]
unique_name_in_owner = true
script = ExtResource("3_p63t7")
duration = 4.0
metadata/_custom_type_script = "uid://dlp3f5ugampel"
